# library

./: README.md
airflow/airflow_docker/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  requirements.txt
airflow/airflow_docker/config/: airflow.cfg  webserver_config.py
airflow/airflow_docker/script/: entrypoint.sh
airflow/dags/: .airflowignore  .gitlab-ci.yml  fix_airflow.py  pyproject.toml
airflow/dags/algorithm_template/: README.md  algorithm_template.py
airflow/dags/algorithm_template/src/: __init__.py  tasks.py
airflow/dags/algorithm_template/src/helper/: __init__.py  great_functions.py
airflow/dags/algorithm_template/src/queries/: __init__.py  ddl.py  query_postgre.py
airflow/dags/src/: connections.py  dates.py  decorators.py  flatten_json.py  kafka.py  ldap.py  prometheus.py  telegram.py
airflow/dags/src/airflow_api/: README.md  __init__.py  airflow_api.py
airflow/dags/src/airflow_defaults/: README.md  __init__.py  tags.py  users.py  utils.py
clickhouse/views/: kafka_engine.sql  replicated_query_log.sql  user_metrics.sql
fastapi/llm-api/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  requirements.txt  werf.yaml
fastapi/llm-api/.helm/: Chart.yaml  secret-values.yaml  values.yaml
fastapi/llm-api/app/: config.py  (+4 more)
postgres/ddl_views_backup/: README.md
postgres/functools/: pg_get_tabledef.sql
postgres/recreate_obj/: README.md  queries.py  recreate_view.py
postgres/set_triggers/: README.md  main.py
postgres/transfer_table/: README.md
postgres/views/: activity.sql  db_weight.sql  foreign_table_create_fdw.sql  locks.sql  recursive_dependensies.sql  size_objects_db.sql  terminate_lock_from_relkind.sql
python/db_sources/: README.md  pyproject.toml  setup.py
python/db_sources/db_sources/: __init__.py  exceptions.py  utils.py
python/db_sources/db_sources/db/: __init__.py  _dbapi.py  _util.py  clickhouse.py  mssql.py  postgresql.py
python/db_sources/db_sources/storage/: s3.py
python/db_sources/tests/: README.md  config.py  test.py
python/db_sources/tests/docker/: docker-compose.yml
(+17 files in other folders)
