[project]
name = "dags"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    'black == 24.4.2',
    'apache-airflow ~= 2.9.2',
    'confluent-kafka ~= 2.4.0',
    'infi.clickhouse-orm ~= 2.1.3',
    'psycopg2 ~= 2.9.9',
    'xlrd ~= 2.0.1',
    'pandera ~= 0.19.3',
    'pyTelegramBotAPI ~= 4.18.0',
    'billiard ~= 4.2.0',
    'more-itertools ~= 10.2.0',
    'msal ~= 1.28.0',
    'pmdarima ~= 2.0.4',
    'smbprotocol ~= 1.13.0',
    'python-ldap ~= 3.4.4 ; platform_system != "Windows"',
    'python-ldap @ https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.4/python_ldap-3.4.4-cp312-cp312-win_amd64.whl ; platform_system == "Windows" and python_version == "3.12"',
    'python-ldap @ https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.4/python_ldap-3.4.4-cp311-cp311-win_amd64.whl ; platform_system == "Windows" and python_version == "3.11"',
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"