[tool.poetry]
name = "db_sources"
version = "1.0.0"
description = "Пакет для работы с различными источниками данных компании DNS"
authors = [
    "Zakhar Leshnevskiy <leshnevskiy.zyu@dns-shop.ru>",
    "Kirill Yuschuk <yuschuk.kv@dns-shop.ru>"
]
readme = "README.md"
repository = "https://github.com/shishkins/library/python/db_sources"
packages = [{include = "db_sources"}]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pandas = "~2.2"
numpy = "~1.26"
psycopg = {version = "~3.2", extras = ["binary"]}
pymssql = "~2.3"
clickhouse-driver = "~0.2"
boto3 = "~1.34"
botocore = "~1.34"
openpyxl = "~3.1"
xlrd = "~2.0"

[tool.poetry.group.test.dependencies]
pytest = "~8.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
